[gd_scene load_steps=14 format=2]

[ext_resource path="res://gem/Gem.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://main/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/Level.wav" type="AudioStream" id=6]
[ext_resource path="res://enemy/froggy/Froggy.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/misc/touch_button.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64.465, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 322.015 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 322.015 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Gem = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 26.5185, 27.483 )

[node name="GemContainer" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreL" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TimerL" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="GameOverL" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = 315.0
margin_right = 166.5
margin_bottom = 373.0
custom_fonts/font = SubResource( 2 )
text = "Game Over!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameT" type="Timer" parent="."]
autostart = true

[node name="CherryT" type="Timer" parent="."]

[node name="LevelAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Froggy" parent="." instance=ExtResource( 7 )]
position = Vector2( 141.181, 272.969 )

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( 139.911, 311.857 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource( 3 )

[node name="Boundaries" type="Node2D" parent="."]

[node name="Left" type="StaticBody2D" parent="Boundaries"]
position = Vector2( -3, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Left"]
position = Vector2( -8, 304 )
shape = SubResource( 4 )

[node name="Right" type="StaticBody2D" parent="Boundaries"]
position = Vector2( 498, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Right"]
position = Vector2( -8, 304 )
shape = SubResource( 5 )

[node name="ButtonContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TouchScreenButton" parent="ButtonContainer"]
position = Vector2( 64, 684 )
rotation = 3.14159
normal = ExtResource( 8 )

[node name="RightButton" type="TouchScreenButton" parent="ButtonContainer"]
position = Vector2( 128, 608 )
normal = ExtResource( 8 )

[node name="UpButton" type="TouchScreenButton" parent="ButtonContainer"]
position = Vector2( 55, 624 )
rotation = -1.5708
normal = ExtResource( 8 )

[node name="DownButton" type="TouchScreenButton" parent="ButtonContainer"]
position = Vector2( 136, 656 )
rotation = 1.5708
normal = ExtResource( 8 )
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="picked" from="Player" to="." method="_on_Player_picked"]
[connection signal="timeout" from="GameT" to="." method="_on_GameT_timeout"]
[connection signal="timeout" from="CherryT" to="." method="_on_CherryT_timeout"]
[connection signal="pressed" from="ButtonContainer/LeftButton" to="Player" method="_on_LeftButton_pressed"]
[connection signal="released" from="ButtonContainer/LeftButton" to="Player" method="_on_LeftButton_released"]
[connection signal="pressed" from="ButtonContainer/RightButton" to="Player" method="_on_RightButton_pressed"]
[connection signal="released" from="ButtonContainer/RightButton" to="Player" method="_on_RightButton_released"]
[connection signal="pressed" from="ButtonContainer/UpButton" to="Player" method="_on_UpButton_pressed"]
[connection signal="released" from="ButtonContainer/UpButton" to="Player" method="_on_UpButton_released"]
[connection signal="pressed" from="ButtonContainer/DownButton" to="Player" method="_on_DownButton_pressed"]
[connection signal="released" from="ButtonContainer/DownButton" to="Player" method="_on_DownButton_released"]
